test/files/neg/double-def-top-level.check
D_3.scala:1: error: C is already defined as class C
class C
      ^
D_3.scala:2: error: O is already defined as object O
object O
       ^
two errors found
